--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/../../public/assets/css/style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Libre+Caslon+Text:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/../../public/assets/js/script.js"></script>
+		
 
     <title>Bookish | A Reading List</title>
 	</head>
 	<body>
-		{{{ body }}}
+    {{{body}}}
 	</body>
 </html>
 
