--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,10 +23,10 @@ h4 {
   font-family: 'Libre Caslon Text', serif;
   color: #f4f5db;
 }
-.list-area {
+.book {
   background: #fff;
 }
-.list-area:hover {
+.book:hover {
   background-color: #d9dab0;
   cursor: pointer;
 }
