ajax call to change finished status

--- a/views/book-block.handlebars
+++ b/views/book-block.handlebars
@@ -1,4 +1,4 @@
-<div class="input-group mb-3 rounded p-1 book" data-id="{{id}}">
+<div class="input-group mb-3 rounded p-1 book" data-id="{{id}}" data-finished="{{finished}}">
   <p class="text-center m-auto">{{book_info}}</p>
   <img src="/../public/assets/img/x-square-fill.svg" alt="Delete " id="delete-btn" data-id="{{this.id}}">
 </div>
