--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Libre+Caslon+Text:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/../../public/assets/js/books.js"></script>
 		
 
     <title>Bookish | A Reading List</title>
