fixed pathway issues

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
   <div class="row justify-content-center">
     <div class="col-8 m-4 rounded">
       <h1 class="text-center m-3">Bookish</h1>
-      <img src="/../public/assets/img/book-stack.png" class="rounded m-auto p-4 d-block" id="book-stack"
+      <img src="/assets/img/book-stack.png" class="rounded m-auto p-4 d-block" id="book-stack"
         alt="Books">
     </div>
   </div>
