--- a/views/partials/book-block.handlebars
+++ b/views/partials/book-block.handlebars
@@ -1,4 +1,6 @@
-<div class="input-group mb-3 rounded p-1 book" data-id="{{id}}" data-finished="{{finished}}">
-  <p class="text-center m-auto">{{book_info}}</p>
-  <img src="assets/img/x-square-fill.svg" alt="Delete " id="delete-btn" data-id="{{this.id}}">
+<div class="input-group mb-3 book rounded p-1">
+  <div class="text-center m-auto" id="bookInfo" data-id="{{id}}" data-finished="{{finished}}">{{book_info}}</div>
+  <button type="button" class="btn btn-secondary rounded" id="delete-btn" data-id="{{this.id}}">
+    <i class="fas fa-trash" style="font-size:18px;"></i>
+  </button>
 </div>
