--- a/views/partials/book-block.handlebars
+++ b/views/partials/book-block.handlebars
@@ -1,6 +1,6 @@
 <div class="input-group mb-3 book rounded p-1">
-  <div class="text-center m-auto" id="bookInfo" data-id="{{id}}" data-finished="{{finished}}">{{book_info}}</div>
-  <button type="button" class="btn btn-secondary rounded" id="delete-btn" data-id="{{this.id}}">
+  <div class="text-center m-auto book-info" data-id="{{id}}" data-finished="{{finished}}">{{book_info}}</div>
+  <button type="button" class="btn btn-secondary rounded delete" data-id="{{this.id}}">
     <i class="fas fa-trash" style="font-size:18px;"></i>
   </button>
 </div>
