--- a/views/partials/book-block.handlebars
+++ b/views/partials/book-block.handlebars
@@ -1,5 +1,5 @@
 <div class="input-group mb-3">
-  <button class="text-center mx-auto rounded book" data-id="{{id}}" data-finished="{{finished}}">
+  <button class="text-center mx-auto rounded book" data-id="{{this.id}}" data-finished="{{finished}}">
     {{book_info}}
   </button>
   <button type="button" class="btn btn-secondary rounded delete" data-id="{{this.id}}">
